Bug 385985 - Password dialog has wrong text
Summary: Password dialog has wrong text
Status: RESOLVED FIXED
Alias: None
Product: Plasma Vault
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Ivan Čukić
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-10-20 11:10 UTC by cryptodude
Modified: 2017-12-09 06:29 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description cryptodude 2017-10-20 11:10:40 UTC
Password dialog asks for "username and password" when I'm trying to open my cryfs test vault.

There is no need, and there is no possibility, to enter a username.

Maybe there is a dialog that just asks for password?
Comment 1 Nate Graham 2017-11-26 02:46:40 UTC
author	Kees vd Broek <cryptodude@libertymail.net>	2017-11-26 02:44:17 (GMT)
committer	Nathaniel Graham <pointedstick@zoho.com>	2017-11-26 02:45:27 (GMT)
commit	0919a1b8ba523aa12fc65211db3c68b84c46f696 (patch)
tree	d4675c0daf379d5a93e1aa81e45249c5e3f0d7e7
parent	5491f35c32c2e75fb0f29fb1ea6509ee66c98f3c (diff)
Avoid inconsistent passworddialogHEADmaster
Summary:
In case the user starts the KPasswordDialog without the KPasswordDialog::ShowUsernameLine,
the dialog will look a bit odd as the text will still state;
 "Supply a username and password below."
while there is no username field to fill in.

This patch adds a string and sets it in the constructor on the "prompt" to match the flags passed into the constructor.

Test Plan:
{F5499508}

{F5499509}

Reviewers: dfaure, cfeck, ngraham

Reviewed By: dfaure, ngraham

Subscribers: ngraham, #frameworks

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D8791
Comment 2 Ivan Čukić 2017-12-09 06:29:27 UTC
Git commit b80ee599b39f0ffeb3bc749d9bcbc8cf592ea146 by Ivan Čukić, on behalf of Kees vd Broek.
Committed on 09/12/2017 at 06:29.
Pushed by ivan into branch 'master'.

Fix PWD dialog

Summary:
Make password dialog have error-handling built in.
Related: bug 385445

This will show the error directly in the dialog and refuse to close
until the mount was successful (or user presses cancel).

Test Plan: {F5518252}

Reviewers: #plasma, ivan

Subscribers: abetts, colomar, jensreuterberg, ngraham, cfeck, plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D8787

M  +2    -0    kded/CMakeLists.txt
M  +6    -45   kded/service.cpp
A  +59   -0    kded/ui/mountdialog.cpp     [License: GPL (v2/3)]
A  +46   -0    kded/ui/mountdialog.h     [License: GPL (v2/3)]
A  +181  -0    kded/ui/mountdialog.ui

https://commits.kde.org/plasma-vault/b80ee599b39f0ffeb3bc749d9bcbc8cf592ea146