Fix PWD dialog

Summary:
Make password dialog have error-handling built in.

BUG: 385985
BUG: 385445

This will show the error directly in the dialog and refuse to close
until the mount was successful (or user presses cancel).

Test Plan: {F5518252}

Reviewers: #plasma, ivan

Subscribers: abetts, colomar, jensreuterberg, ngraham, cfeck, plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D8787